fix NavBar link spacing

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@ a {
   padding-right: 0;
   padding-left: 0;
   display: block;
-  padding: 0.5rem 0rem;
+  padding: 0.5rem 1rem;
 }
 
 body {
